<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindersPM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_date">1 January 2014</string>
    <string name="default_time">00:00</string>
    <string name="new_task_title">Task Title</string>
    <string name="new_task_date">Date of Task</string>
    <string name="new_task_time">Time of Task</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="task_details">Task Details</string>
    <string name="task_date_hint">Date of Task</string>
    <string name="task_time_hint">Time of Task</string>
    <string name="first_reminder_details">First Reminder</string>
    <string name="reminder_date_hint">Date of First Reminder</string>
    <string name="reminder_time_hint">Time of First Reminder</string>
    <string name="radio_high">High</string>
    <string name="radio_medium">Medium</string>
    <string name="task_importance">Importance</string>
    <string name="radio_low">Low</string>
    <string name="task_category">Category</string>
    <string name="reminder_task_same">Remind me at this date and time</string>
    <string name="task_notes">Notes</string>
    <string name="continue_button">Continue</string>
    <string name="reminder_schedule">Reminder Schedule</string>
    <string name="change_datetime_header">Edit Date / Time</string>
    <string name="date_of_reminder">Date:</string>
    <string name="time_of_reminder">Time:</string>
    <string name="confirm">Confirm</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="profile_details">Profile Details</string>
    <string name="profile_name">Name</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="confidential_declaration">Accurate date of birth is required for best calculation of your reminder schedule for each task. Information will not be sent to developer and will be kept confidential.</string>
    <string name="task_categories">Task Categories</string>
    <string name="category_name">Category Name</string>
    <string name="alert_tone">Alert Tone</string>
    <string name="default_tone">Default</string>
    <string name="motivation">Motivation</string>
    <string name="clear_all">Clear All</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_button">Delete</string>
    <string name="event_title">Name of Event</string>
    <string name="start_time">Start Time</string>
    <string name="to">To</string>
    <string name="end_time">End Time</string>
    <string name="complexity_subheader">Complexity</string>
    <string name="noisy">Noisy</string>
    <string name="dnd">Do Not Disturb</string>
    <string name="environment_subheader">Environment</string>
    <string name="edit_event">Edit Event</string>
    <string name="next_reminder_details">Next Reminder</string>
    <string name="delete_confirmation">Are you sure?</string>
    <string name="completed">Completed</string>
    <string name="ringtone_picker">Pick Ringtone</string>
    <string name="add_category">New Category</string>
    <string name="new_reminder">Add Reminder</string>

    <string-array name="category_list">
        <item>General</item>
        <item>Study</item>
        <item>Work</item>
        <item>Social</item>
    </string-array>

    <string-array name="drawer_list">
        <item>To do</item>
        <item>History</item>
        <item>Settings</item>
        <item>My Routine</item>
    </string-array>

    <string-array name="days_list">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
