<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    style="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        style="@style/SectionHeader"
        android:text="@string/task_details"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff4f4f4f"/>

    <EditText
        android:id="@+id/task_title_edittext"
        android:layout_width="match_parent"
        style="@style/TextFieldWithIcon"
        android:hint="@string/new_task_title"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/task_date_edittext"
        android:layout_width="match_parent"
        android:cursorVisible="false"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_date_picker"
        android:hint="@string/task_date_hint"
        style="@style/TextFieldWithIcon"/>


    <EditText
        android:id="@+id/task_time_edittext"
        android:layout_width="match_parent"
        android:cursorVisible="false"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginTop="-2dp"
        android:drawableLeft="@drawable/ic_time_picker"
        android:hint="@string/task_time_hint"
        style="@style/TextFieldWithIcon"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/cancel_task_button"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            style="@style/GreyButton"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>


        <Button
            android:id="@+id/save_task_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/save_button"
            style="@style/BlueButton"/>


    </LinearLayout>

</LinearLayout>
