<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/category_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        style="@style/TextFieldWithIcon"
        android:hint="@string/category_name"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/alert_tone"
        style="@style/SubsectionHeader"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff4f4f4f"/>

    <RelativeLayout
        android:id="@+id/alert_tone_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/alert_text_clickable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_right_arrow"/>


    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/SubsectionHeader"
        android:layout_marginTop="20dp"
        android:text="@string/motivation"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ff4f4f4f"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_high"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_medium"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_low"/>

    </RadioGroup>

</LinearLayout>
